[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/bookbutton.png" type="Texture" id=1]
[ext_resource path="res://assets/shopbutton.png" type="Texture" id=2]
[ext_resource path="res://uiscripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://pixelmix.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/uibox2.png" type="Texture" id=5]
[ext_resource path="res://new_theme.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 54.0
rect_scale = Vector2( 2, 2 )
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureButton" parent="VBoxContainer"]
margin_right = 30.0
margin_bottom = 25.0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/Menu"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "shop"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Book" type="TextureButton" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 30.0
margin_bottom = 54.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Book"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "book"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -32.0
margin_right = 53.0
margin_bottom = 21.0
rect_scale = Vector2( 2, 2 )
rect_clip_content = false
theme = ExtResource( 6 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
margin_right = 106.0
margin_bottom = 80.0
columns = 5

[node name="TextureButton" type="TextureButton" parent="ScrollContainer/GridContainer"]
margin_right = 18.0
margin_bottom = 24.0
texture_normal = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="ScrollContainer/GridContainer"]
margin_left = 22.0
margin_right = 40.0
margin_bottom = 24.0
texture_normal = ExtResource( 5 )

[node name="TextureButton3" type="TextureButton" parent="ScrollContainer/GridContainer"]
margin_left = 44.0
margin_right = 62.0
margin_bottom = 24.0
texture_normal = ExtResource( 5 )

[node name="TextureButton4" type="TextureButton" parent="ScrollContainer/GridContainer"]
margin_left = 66.0
margin_right = 84.0
margin_bottom = 24.0
texture_normal = ExtResource( 5 )

[node name="TextureButton5" type="TextureButton" parent="ScrollContainer/GridContainer"]
margin_left = 88.0
margin_right = 106.0
margin_bottom = 24.0
texture_normal = ExtResource( 5 )

[node name="TextureButton6" type="TextureButton" parent="ScrollContainer/GridContainer"]
margin_top = 28.0
margin_right = 18.0
margin_bottom = 52.0
texture_normal = ExtResource( 5 )

[node name="TextureButton7" type="TextureButton" parent="ScrollContainer/GridContainer"]
margin_left = 22.0
margin_top = 28.0
margin_right = 40.0
margin_bottom = 52.0
texture_normal = ExtResource( 5 )

[node name="TextureButton8" type="TextureButton" parent="ScrollContainer/GridContainer"]
margin_left = 44.0
margin_top = 28.0
margin_right = 62.0
margin_bottom = 52.0
texture_normal = ExtResource( 5 )

[node name="TextureButton9" type="TextureButton" parent="ScrollContainer/GridContainer"]
margin_left = 66.0
margin_top = 28.0
margin_right = 84.0
margin_bottom = 52.0
texture_normal = ExtResource( 5 )

[node name="TextureButton10" type="TextureButton" parent="ScrollContainer/GridContainer"]
margin_left = 88.0
margin_top = 28.0
margin_right = 106.0
margin_bottom = 52.0
texture_normal = ExtResource( 5 )

[node name="TextureButton11" type="TextureButton" parent="ScrollContainer/GridContainer"]
margin_top = 56.0
margin_right = 18.0
margin_bottom = 80.0
texture_normal = ExtResource( 5 )

[node name="TextureButton12" type="TextureButton" parent="ScrollContainer/GridContainer"]
margin_left = 22.0
margin_top = 56.0
margin_right = 40.0
margin_bottom = 80.0
texture_normal = ExtResource( 5 )

[node name="TextureButton13" type="TextureButton" parent="ScrollContainer/GridContainer"]
margin_left = 44.0
margin_top = 56.0
margin_right = 62.0
margin_bottom = 80.0
texture_normal = ExtResource( 5 )

[node name="TextureButton14" type="TextureButton" parent="ScrollContainer/GridContainer"]
margin_left = 66.0
margin_top = 56.0
margin_right = 84.0
margin_bottom = 80.0
texture_normal = ExtResource( 5 )

[node name="TextureButton15" type="TextureButton" parent="ScrollContainer/GridContainer"]
margin_left = 88.0
margin_top = 56.0
margin_right = 106.0
margin_bottom = 80.0
texture_normal = ExtResource( 5 )

[connection signal="mouse_entered" from="VBoxContainer/Menu" to="." method="_on_Menu_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Menu" to="." method="_on_Menu_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Book" to="." method="_on_Book_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Book" to="." method="_on_Book_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Book" to="." method="_on_Book_pressed"]
